cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webwork-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - oys2.izu.edu.tr
      secretName: webwork-tls
  rules:
    - host: oys2.izu.edu.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webwork
                port:
                  name: http
